--- a/portfolio/src/components/ProjectsList/ProjectModal.modules.scss
+++ b/portfolio/src/components/ProjectsList/ProjectModal.modules.scss
@@ -1,11 +1,9 @@
 .project-modal {
-  width: 150vw;
   height: 70vh;
   position: relative;
-  //   top: 300%;
+  display: none;
+  left: 10%;
   top: -25%;
-  left: 60%;
-  // z-index: -2;
   z-index: 5;
   transition: 1s all ease-in-out;
   display: flex;
@@ -13,7 +11,7 @@
   justify-content: center;
   align-items: center;
   font-size: 1.5rem;
-  transition: 0.5s all ease-in-out;
+  transition: 0.25s all ease-in-out;
 
   @media (max-width: 1500px) {
     height: 85vh;
@@ -22,26 +20,30 @@
 
   @media (max-width: 1300px) {
     height: 85vh;
-    width: 100vw;
+    width: 80vw;
     top: -10%;
-    left: 37%;
+    left: 10%;
   }
   @media (max-width: 500px) {
     height: 120vh;
-
     top: -5%;
     z-index: 200;
   }
   opacity: 0;
   &--active {
+    width: 150vw;
+    left: 60%;
     z-index: 1000;
     background-color: white;
-    transition: 1s all ease-in-out;
+    transition: 0.5s all ease-in-out;
     opacity: 1;
     transform: translateX(-35%);
-    @media (max-width: 400px) {
-      top: 0;
-      z-index: 2000;
+    @media (max-width: 1300px) {
+      left: 37%;
+      width: 110vw;
+    }
+    @media (max-width: 650px) {
+      margin-top: -6rem;
     }
   }
   &--closed {
