--- a/portfolio/src/components/ProjectsList/ProjectsList.modules.scss
+++ b/portfolio/src/components/ProjectsList/ProjectsList.modules.scss
@@ -1,6 +1,7 @@
 @import '../../variables';
 .projects {
-  width: 100vw;
+  // width: 110vw;
+  // max-width: 100vw;
   height: auto;
   // background-color: $color-primary;
   background: rgb(10, 41, 112);
@@ -25,7 +26,7 @@
     align-items: center;
     padding: 2rem 5rem;
     & > * {
-      width: 80vw;
+      // width: 80vw;
     }
   }
   &__title {
