--- a/portfolio/src/globalStyles.scss
+++ b/portfolio/src/globalStyles.scss
@@ -28,8 +28,6 @@ html {
 }
 
 body {
-  width: 100vw;
-  max-width: 100%;
   overflow-x: hidden;
 }
 
